# polar_ice_fishing_scanner

./: README.md  components.json  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: fish_data.json
src-tauri/capabilities/: capabilities.json
src-tauri/src/: main.rs  pn532.rs
src/components/: SnowfallBackground.tsx  fish-endangered-status-badge.tsx  fish-info-card.tsx  snowfall-background.tsx
src/components/ui/: badge.tsx  button.tsx  item.tsx
src/hooks/: use-fish-scanner.ts  use-fullscreen-on-mount.ts  useFishScanner.ts
src/screens/: index.tsx
