[package]
name = "polar_ice_fishing_scanner_gui"
version = "1.0.0"
description = "A tauri app that reads info from a nfc reader and displays information about the scanned fish"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
rand = "0.8"

# PN532 NFC dependencies (Linux/Raspberry Pi only)
[target.'cfg(target_os = "linux")'.dependencies]
spidev = "0.6"
gpio-cdev = "0.6"

[features]
custom-protocol = ["tauri/custom-protocol"]
